src/test/test-models/bad/data_index/non_data_index2.stan
parameters {
  real y[3];

}
transformed parameters {
  vector[size(y)] z;
}
